2006-11-08  Karl Berry  <karl@gnu.org>

	* pretest version 2.1.95.
	* configure.ac (AM_GNU_GETTEXT_VERSION): bump to 0.16.
	update gnulib, too.
	* gnulib/lib/.cvsignore: ignore .deps.

	* doc/hello.texi (Sample output): remove wrong --help example.
	Change node names to "Initial cap only" style.

2006-10-18  Karl Berry  <karl@gnu.org>

	* pretest version 2.1.94.

2006-10-15  Bob Proulx  <bob@proulx.com>  (tiny change)

	Remove trailing whitespace from files.
	Using 'diff -w' afterward shows no changes.
	* AUTHORS: Run Emacs function 'nuke-trailing-whitespace' on file.
	* ChangeLog.O: Likewise.
	* ChangeLog: Likewise.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* THANKS: Likewise.
	* doc/ChangeLog: Likewise.
	* doc/Makefile.am: Likewise.
	* doc/hello.texi: Likewise.
	* man/ChangeLog: Likewise.
	* man/Makefile.am: Likewise.
	* po/POTFILES.in: Likewise.
	* src/ChangeLog: Likewise.
	* src/Makefile.am: Likewise.
	* src/hello.c: Likewise.
	* tests/greeting-1: Likewise.
	* tests/greeting-2: Likewise.
	* tests/hello-1: Likewise.
	* tests/traditional-1: Likewise.
2006-10-15  Karl Berry  <karl@gnu.org>

	* pretest version 2.1.93.

	* tests/*: try to remove \r from the output, so as not to fail on
	Windows systems.

2006-08-28  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Set HELP2MAN to a dummy when cross-compiling.

2006-08-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* configure.ac (AC_CONFIG_FILES): Drop backslashes.

	* Makefile.am (diff): Do not use `echo -e'.

2006-08-23  Karl Berry  <karl@gnu.org>

	* Pretest version 2.1.92.

2006-08-20  Karl Berry  <karl@gnu.org>

	* Pretest version 2.1.91.

2006-08-13  gettextize  <bug-gnu-gettext@gnu.org>

	* gnulib/m4/longlong.m4: Upgrade to gettext-0.15.
	* gnulib/m4/ulonglong.m4: Upgrade to gettext-0.15.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.15.

2006-08-09  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_PROG_RANLIB): not needed, it's done in gl_EARLY.
	From Bruno.
