@@ -1,3 +1,11 @@
+2006-11-09  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* src/hello.c (main): Make greeting const char *, to avoid
+	a violation of the C standard when assigning _("...") to it.
+	Remove unnecessary #if ENABLE_NLS bracket.
+	If too many operands are given, report our name, and the first
+	extra one.
+
 2006-11-08  Karl Berry  <karl@gnu.org>
 
 	* pretest version 2.1.95.
